# PATP

./: .gitignore  Cargo.toml  LICENSE.md  README.md  Specification.md  docs.md  file.patp
.github/workflows/: rust.yml
assembler/: Cargo.toml
assembler/src/: lib.rs
assembler/src/parser/: mod.rs
emulator/: Cargo.toml
emulator/src/: cpu.rs  instruction.rs  lib.rs
examples/: add.patp  inc.patp  loop.patp
src/: assembler.rs  instruction.rs  lib.rs  main.rs  parser.rs  run.rs
src/assembler/: mod.rs
src/assembler/parser/: mod.rs  test_files.rs  test_lines.rs
src/cli/: mod.rs
src/cpu/: mod.rs  test.rs
src/emulator/: cpu.rs  error.rs  instruction.rs  mod.rs  test.rs
src/parser/: mod.rs  test.rs  test_files.rs  test_lines.rs
