[package]
name = "patp"
version = "0.1.2"
authors = ["Joe Harrison <joeyh021@icloud.com>"]
edition = "2021"
repository = "https://github.com/Joeyh021/PATP"
license = "MIT"
description = "An emulator and assembler for the Pedagogically Advanced Teaching Processor"
readme = "README.md"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "3.1.18", features = ["derive", "cargo"] }
nom = "7.1.1"
